Intento dibujado piezas y objeto de piezas

--- a/practica03/index.html
+++ b/practica03/index.html
@@ -39,9 +39,9 @@
 	
 	<section id="zonaPiezas">
 		<h2>Piezas disponibles</h2>
-		<canvas id="pieza1"></canvas>
-		<canvas id="pieza2"></canvas>
-		<canvas id="pieza3"></canvas>
+		<canvas id="zonaPieza1"></canvas>
+		<canvas id="zonaPieza2"></canvas>
+		<canvas id="zonaPieza3"></canvas>
 	</section>
 
 	<footer>
@@ -53,12 +53,6 @@
 	<script>
 
 		pedirPuntuaciones(); 					// Al cargar la pagina se pide la tabla de puntuaciones
-
-		ajustarTam(); 							// Ajustamos tam zona juego
-		crearZona('zonaJuego', 10); 			// Realizacmos las divisones de las casillas para la zona
-		crearZona('pieza1', 5);
-		crearZona('pieza2', 5);
-		crearZona('pieza3', 5);
 
 	</script>
 	
