--- a/practica03/index.html
+++ b/practica03/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Para que se pueda aplicar un diseño adaptable y la correcta visualizacion en dispo móviles -->
 	<script src="javascript.js"></script>
-	<link rel="stylesheet" type="text/css" href="estilos/estilo.css">
+	<link rel="stylesheet" type="text/css" href="estilos/estilo2.css">
 	<title>1010</title>
 </head>
 <body>
@@ -27,21 +27,23 @@
 		    <span class="jugar" onclick="jugar();">Jugar</span>
 		</div>
 
-	</div>
+	</div> 
 
-	<section id="panelJuego">
+	<section id="zonaJuego">
 		<h2>Panel de juego</h2>
 		<div id="puntuacion">
 			<p><strong>Puntuación:</strong> O</p>
 		</div>
-		<canvas id="zonaJuego"></canvas>
+		<canvas id="panelJuego"></canvas>
 	</section>
 	
 	<section id="zonaPiezas">
 		<h2>Piezas disponibles</h2>
-		<canvas id="zonaPieza1"></canvas>
-		<canvas id="zonaPieza2"></canvas>
-		<canvas id="zonaPieza3"></canvas>
+		<div id="canvasPiezas">
+			<canvas id="zonaPieza1"></canvas>
+			<canvas id="zonaPieza2"></canvas>
+			<canvas id="zonaPieza3"></canvas>
+		</div>
 	</section>
 
 	<footer>
@@ -52,7 +54,8 @@
 
 	<script>
 
-		pedirPuntuaciones(); 					// Al cargar la pagina se pide la tabla de puntuaciones
+		prepararZona(); 				// Se ajustan los tamaños de los canvas y se realizan las divisiones
+		pedirPuntuaciones(); 			// Maximas puntuaciones de la base de datos
 
 	</script>
 	
