--- a/practica03/index.html
+++ b/practica03/index.html
@@ -40,9 +40,9 @@
 	<section id="zonaPiezas">
 		<h2>Piezas disponibles</h2>
 		<div id="canvasPiezas">
-			<canvas id="zonaPieza1"></canvas>
-			<canvas id="zonaPieza2"></canvas>
-			<canvas id="zonaPieza3"></canvas>
+			<canvas id="zonaPieza1" onclick="seleccionPieza(this)"></canvas>
+			<canvas id="zonaPieza2" onclick="seleccionPieza(this)"></canvas>
+			<canvas id="zonaPieza3" onclick="seleccionPieza(this)"></canvas>
 		</div>
 	</section>
 
