--- a/practica03/index.html
+++ b/practica03/index.html
@@ -40,9 +40,9 @@
 	<section id="zonaPiezas">
 		<h2>Piezas disponibles</h2>
 		<div id="canvasPiezas">
-			<canvas id="zonaPieza1" class="zonaPieza" onclick="seleccionPieza(this)"></canvas>
-			<canvas id="zonaPieza2" class="zonaPieza" onclick="seleccionPieza(this)"></canvas>
-			<canvas id="zonaPieza3" class="zonaPieza" onclick="seleccionPieza(this)"></canvas>
+			<canvas id="zonaPieza1" class="zonaPieza" onclick="seleccionPieza(1)"></canvas>
+			<canvas id="zonaPieza2" class="zonaPieza" onclick="seleccionPieza(2)"></canvas>
+			<canvas id="zonaPieza3" class="zonaPieza" onclick="seleccionPieza(3)"></canvas>
 		</div>
 	</section>
 
