Variable imagen piezas y comprobacion dibujado pieza

--- a/practica03/index.html
+++ b/practica03/index.html
@@ -34,7 +34,7 @@
 		<div id="puntuacion">
 			<p><strong>Puntuación:</strong> O</p>
 		</div>
-		<canvas id="panelJuego"></canvas>
+		<canvas id="panelJuego"  onclick="dibujarPiezaTablero();"></canvas>
 	</section>
 	
 	<section id="zonaPiezas">
