--- a/practica03/index.html
+++ b/practica03/index.html
@@ -31,8 +31,8 @@
 
 	<section id="zonaJuego">
 		<h2>Panel de juego</h2>
-		<div id="puntuacion">
-			<p><strong>Puntuación:</strong> O</p>
+		<div class="puntuacion">
+			<p><strong>Puntuación:</strong> 0 puntos</p>
 		</div>
 		<canvas id="panelJuego"  onclick="dibujarPiezaTablero();"></canvas>
 	</section>
