--- a/practica03/acerca.html
+++ b/practica03/acerca.html
@@ -3,23 +3,41 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Para que se pueda aplicar un diseño adaptable y la correcta visualizacion en dispo móviles -->
+	<link rel="stylesheet" type="text/css" href="estilos/estilo2.css">
 	<title>acerca</title>
 </head>
 <body>
-
-	<header> <!-- Titulo pagina y descripcion -->
+	<header> 
 		<div id="headerItems">
-			<a class="none" title="Volver a la pagina principal" href="index.html">
-				<div class="titulo"><h1>GAMES4LIFE</h1></div>
+			<a title="Volver al juego" href="index.html">
+			<img src="fotos/1010_logo1.png" alt="Imagen_logo">
 			</a>
-				<div><h3>Coloca las piezas de forma correcta para completar filas y hacerlas eliminar</h3></div>
+			<a title="Volver inicio" href="index.html">
+			<div class="titulo"><h1>GAMES4LIFE</h1></div>
+			</a>
+			<div><h3>Coloca las piezas de forma correcta para completar filas y hacerlas eliminar</h3></div>
 		</div>
 	</header>
 
 
+<section class="preview" > <!-- 9 fotos mejor valoradas -->
+		<fieldset class="acerca">
+			<h2>Información sobre la práctica 3</h2>
+			<p>Este minijuego ha sido realizado para la practica 3 de la asignatura de <b>Programación del Cliente
+			Web</b>, la cual pertenece al 2º curso de la titulación del Grado en Ingeniería Multimedia.</p>
+			<p>Se han conseguido implementar todas las partes propuestas<b>a excepción </b> de: Contabilizar...</p>
+			<p>Realizada por:
+			<b>Alejandro Roca Vande Sype</b> DNI <b>48828691J</b>.</p>
+			<p>Correo: <b>roca-vandesype@hotmail.com</b> Grupo: <b>Miercoles, de 15h a 17h.</b>
+			</p>
+
+			<b>Andrés Ferre García</b> DNI <b>20053549-X</b>.</p>
+			<p>Correo: <b>andresferre94@gmail.com</b> Grupo: <b>Miercoles, de 15h a 17h.</b></p>
+		</fieldset>
+	</section>
+
 	<footer>
-		<!-- Copyright e informacion de contacto-->
-		<p><strong>Alejandro Roca Vande Sype </strong>| &copy; Abril 2019</p>
+		<p><strong>Alejandro Roca Vande Sype </strong>| <strong>Andrés Ferre García</strong>  &copy; Junio 2019</p>
 	</footer>
 	
 </body>
