--- a/practica03/index.html
+++ b/practica03/index.html
@@ -8,12 +8,16 @@
 	<title>1010</title>
 </head>
 <body>
-	<header> <!-- Titulo pagina y descripcion -->
+
+<header> 
 		<div id="headerItems">
-			<a class="none" title="Volver a la pagina principal" href="index.html">
-				<div class="titulo"><h1>GAMES4LIFE</h1></div>
+			<a title="Volver al juego" href="index.html">
+			<img src="fotos/1010_logo1.png" alt="Imagen_logo">
 			</a>
-			<div><h3 id="descripcion" >Coloca las piezas de forma correcta para completar filas y hacerlas eliminar</h3></div>
+			<a title="Volver inicio" href="index.html">
+			<div class="titulo"><h1>GAMES4LIFE</h1></div>
+			</a>
+			<div><h3>Coloca las piezas de forma correcta para completar filas y hacerlas eliminar</h3></div>
 		</div>
 	</header>
 
@@ -28,14 +32,6 @@
 		</div>
 
 	</div> 
-	
-	<div id="myModal2" class="modal2">
-		<div class="modal-content">
-		    <span class="close" onclick="cerrarVentana();">&times;</span>
-		    <p class="error" > ¡No se puede colocar la pieza ahi!</p>
-		</div>
-	</div> 
-
 
 	<section id="zonaJuego">
 		<h2>Panel de juego</h2>
@@ -55,8 +51,7 @@
 	</section>
 
 	<footer>
-		<!-- Copyright e informacion de contacto-->
-		<p><a class="enlaces" href="acerca.html"><strong>Alejandro Roca Vande Sype</strong></a> | &copy; Abril 2019</p>
+		<a href="acerca.html"><p><strong>Alejandro Roca Vande Sype </strong> </a>| <a href="acerca.html"><strong>Andrés Ferre García</strong></a>  &copy; Junio 2019</p>
 	</footer>
 
 
