--- a/practica03/acerca.html
+++ b/practica03/acerca.html
@@ -25,7 +25,7 @@
 			<h2>Información sobre la práctica 3</h2>
 			<p>Este minijuego ha sido realizado para la practica 3 de la asignatura de <b>Programación del Cliente
 			Web</b>, la cual pertenece al 2º curso de la titulación del Grado en Ingeniería Multimedia.</p>
-			<p>Se han conseguido implementar todas las partes propuestas<b>a excepción </b> de: Contabilizar...</p>
+			<p>Se han conseguido implementar todas las partes propuestas<b>a excepción </b> de: Detectar tanto el fin del juego como las filas o columnas completadas. La ventana modal y la opción de volver a jugar se podría implementar perfectamente aunque no tiene sentido sin comprobar el final del juego antes.</p>
 			<p>Realizada por:
 			<b>Alejandro Roca Vande Sype</b> DNI <b>48828691J</b>.</p>
 			<p>Correo: <b>roca-vandesype@hotmail.com</b> Grupo: <b>Miercoles, de 15h a 17h.</b>
@@ -37,7 +37,7 @@
 	</section>
 
 	<footer>
-		<p><strong>Alejandro Roca Vande Sype </strong>| <strong>Andrés Ferre García</strong>  &copy; Junio 2019</p>
+		<p><strong>Alejandro Roca Vande Sype </strong>| <strong>Andrés Ferre García</strong>  &copy; Junio 2019 |<a href="index.html"> Volver al juego</a></p>
 	</footer>
 	
 </body>
