--- a/practica03/index.html
+++ b/practica03/index.html
@@ -32,6 +32,13 @@
 		</div>
 
 	</div> 
+	
+	<div id="myModal2" class="modal2">
+		<div class="modal-content">
+		    <span class="close" onclick="cerrarVentana();">&times;</span>
+		    <p class="error" > ¡No se puede colocar la pieza ahi!</p>
+		</div>
+	</div> 
 
 	<section id="zonaJuego">
 		<h2>Panel de juego</h2>
