Examen realizado completamente

--- a/examen/index.html
+++ b/examen/index.html
@@ -11,6 +11,12 @@
 
 </head>
 <body>
+
+	<!-- Ventana Modal para mostrar el mensaje de error de login o login correcto-->
+	<div id="myModal" class="modal">
+		<div class="modal-content">
+		</div>
+	</div>
 	
 	<header>
 		<h1>Juego de las parejas</h1>
