Preparacion material examen

--- a/PruebasExamen/estructuraCanvas/index.html
+++ b/PruebasExamen/estructuraCanvas/index.html
@@ -32,7 +32,7 @@
 		</footer>
 		</article>
 		<article>
-		<canvas id="canvas03"  class="canvas" ></canvas>
+		<canvas id="canvas03"  class="canvas" onclick="dibujarImagenCelda();"></canvas>
 		<footer>
 			<button onclick="dividirImagen();">Dividir Imagen</button>
 			<button onclick="moverImagen();">Mover Imagen</button>
