--- a/examen/index.html
+++ b/examen/index.html
@@ -2,53 +2,36 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Juego de las parejas</title>
-	<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Para que se pueda aplicar un diseño adaptable y la correcta visualizacion en dispo móviles -->
+	<script src="javascript.js"></script>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 
-	<script src="javascript.js"></script>
-
+	<title>Examen</title>
 </head>
 <body>
-
-	<!-- Ventana Modal para mostrar el mensaje de error de login o login correcto-->
-	<div id="myModal" class="modal">
-		<div class="modal-content">
-		</div>
-	</div>
-	
 	<header>
-		<h1>Juego de las parejas</h1>
+		<h1>Examen</h1>
 		<h2>Examen de Programacion de Cliente Web</h2>
-		<h3>Lunes, 17 de junio de 2019, 9:00h</h3>
+		<h3>Viernes, 11 de julio de 2019, 8.30h</h3>
 	</header>
 	
 	<!-- Zona principal de la pagina -->
 	<div id="principal">
 		
-		<h3>Consigue descubrir todas las parejas en el menor número de jugadas posibles</h3>
-
-
 
 
 	</div>
-	
-	<p id="jugadas"></p>
 
 	<footer>
-		
 		<p><strong>Alejandro Roca Vande Sype</strong></p>
 		<p><strong>48828691J</strong></p>
-		<p><strong>GRUPO 00</strong></p>
-
+		<p><strong>GRUPO 05</strong></p>
 	</footer>
 
 
 	<script>
 		
-		iniciarJuego();
-
+		//prueba();
 	</script>
 </body>
 </html>
